--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
 body {
     background-color: rgba(188,164,215,0.5);
 }
-
 p{
     width: 50%;
     display: inline;
@@ -18,6 +17,14 @@ h2 {
     text-decoration: underline;
 }
 
+img {
+    height: 300px;
+    width: 30%;
+    padding: 30px 20px;
+    float: left;
+    clear: both;
+}
+
 
 ul {
     padding: 20px;
@@ -26,6 +33,12 @@ ul {
 li {
     list-style: none;
     margin: 0;
+}
+
+footer {
+    margin: 0 auto;
+    position: static;
+    text-align: right;
 }
 
 form {
@@ -55,6 +68,7 @@ form {
     font-size: 250%;
     padding: 20px;
     color: #9C89B3;
+    letter-spacing: 4px;
     text-decoration: none;
     text-transform: uppercase;
     float: left;
@@ -62,13 +76,33 @@ form {
 
 .navigation-menu {
     font-size: 100%;
+    letter-spacing: 4px;
     position: relative;
-    left: 400px;
+    left: 300px;
     bottom: auto;
 }
 
 .feelgood {
     display: block;
+}
+
+footer > p {
+    font-size: 110%;
+    float: left;
+    position: relative;
+    left: -150px;
+    top: 30px;
+    
+}
+
+#social-media {
+    color: #4B4453;
+    float: right;
+
+}
+
+#social-media li {
+    display: inline-block;
 }
 
 label {
@@ -93,14 +127,6 @@ header{
 
 a:hover {
     color: #a393eb;
-}
-
-img {
-    height: 300px;
-    width: 30%;
-    padding: 30px 20px;
-    float: left;
-    clear: both;
 }
 
 /*
