updated nav element to be structured in an ordered list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,11 +103,12 @@ footer > p {
 #social-media {
     color: #4B4453;
     float: right;
+    display: inline;
 
 }
 
 #social-media li {
-    display: inline-block;
+    display: inline;
 }
 
 label {
