added google fonts to body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto:wght@300&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
     background-image: url ('../assets/images/lavender-photo.jpeg');
     background-color: rgba(188,164,215,0.5);
 }
