--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ h1, h2 {
     text-decoration: underline;
     text-align: center;
     letter-spacing: 3px;
+    margin-top: 20px;
 }
 
 p{
@@ -109,7 +110,7 @@ form {
     text-align: right;
     text-decoration: none;
     color: #4B4453;
-    margin-left: 10px;
+    margin-right: 20px;
     padding: 15px;
 }
 
@@ -124,9 +125,10 @@ form {
 /* hero image */
 
 #hero-image {
-    height: 400px;
+    height: 250px;
     width: 100%;
-    background: url('../images/hero-image.jpg') no-repeat;
+    background: url('../images/hero-image.jpg') repeat;
+    background-position: 2% 20%;
 }
 
 .feelgood {
