--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ h1, h2 {
     text-align: center;
     letter-spacing: 3px;
     margin-top: 20px;
+    color: #DDEDF5;
 }
 
 h3 {
@@ -33,19 +34,15 @@ h3 {
 p{ 
     text-align: center;
     padding: 10px;
-}
-
-#bottom-image {
-    height: 200px;
-    width: 100%;
-    position: cover no-repeat;
-    clear: both;
+    margin-top: 20px;
+    color: #FCFAF5;
 }
 
 li {
     list-style-type: none;
     padding: 5px;
     text-align: center;
+    color: #FCFAF5;
 }
 
 
@@ -101,24 +98,32 @@ form > label {
 #float-right {
     float: right;
     width: 33%;
-    border: 1pxsolid black;
+    padding: 50px 30px;
+    
 }
+
 #float-center {
     margin: 0 auto;
     width: 33%;
+    padding: 50px 30px;
+    
 }
 #float-left {
     float: left;
     width: 33%;
+    padding: 50px 30px;
+    
 }
 
-/*
-#footer-image {
-    height: 300px;
-    width:100%;
-    overflow: hidden;
+#text-image {
+    background: url('/assets/images/nightsky.jpeg');
+    margin-top: 10px;
+    height: 400px;
+    width: 100%;
+    position: center center cover no-repeat;
+    display:inline-block;
 }
-*/
+
 
 /* navigation menu */
 
@@ -179,6 +184,7 @@ footer {
 
 footer > p {
     font-size: 120%;
+    color: #3a3a3a;
     display: inline;
 }
 
