--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,13 @@ form > label {
 
 }
 
+#form-background {
+    width: 90%;
+    height: 600px;
+    background: rgb(2,0,36);
+    background: linear-gradient( rgba(2, 129, 207,0.4), rgba(0, 137, 186, 0.3), rgba(131, 94, 194,0.2));
+}
+
 .active {
     border-bottom: 1px solid #a393eb;
 }
@@ -117,6 +124,7 @@ form > label {
 
 #text-image {
     background: url('/assets/images/nightsky.jpeg');
+    background-color: #462684;
     margin-top: 10px;
     height: 400px;
     width: 100%;
