--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,10 +25,11 @@ h1, h2 {
 }
 
 h3 {
-    float: left;
+    text-align: left;
     clear: both;
-    line-height: 0px;
+    height: 2px;
     margin-left: 20px;
+    margin-bottom: 30px;
 }
 
 p{ 
@@ -95,27 +96,28 @@ form > label {
 
 #logo {
     font-size: 350%;
-    padding: 20px;
+    padding-left: 20px;
+    height: 75px;
     color: #9C89B3;
     letter-spacing: 3px;
     text-decoration: none;
     float: left;
 }
 
-#float-right {
+.float-right {
     float: right;
     width: 33%;
     padding: 50px 30px;
     
 }
 
-#float-center {
+.float-center {
     margin: 0 auto;
     width: 33%;
     padding: 50px 30px;
     
 }
-#float-left {
+.float-left {
     float: left;
     width: 33%;
     padding: 50px 30px;
