--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,12 @@ footer {
     text-align: center;
 }
 
+hr {
+    border-bottom: 1px solid #3a3a3a;
+    width: 60px;
+    margin-left: 20px;
+}
+
 
 form {
     clear: both;
@@ -123,6 +129,31 @@ form > label {
     padding: 50px 30px;
     
 }
+
+/* tutorial page styling */
+
+.tutorial-text p {
+    color: #3a3a3a;
+    text-align: center;
+    line-height: 20px;
+    margin-right: 30px;
+    margin-left: 20px;
+}
+
+.tutorial-text h4 {
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: underline 1px solid #3a3a3a;
+    margin-left: 20px;
+}
+
+video {
+    height: 300px;
+    width: 500px;
+    margin: 0 auto;
+}
+
+/* image background for index.html information sections */
 
 #text-image {
     background: url('/assets/images/nightsky.jpeg');
