--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ form > label {
     letter-spacing: 3px;
     text-decoration: none;
     float: left;
+    position: absolute;
 }
 
 .float-right {
@@ -179,10 +180,8 @@ video {
 
 .navigation-menu a{
     font-size: 200%;
-    text-align: right;
     text-decoration: none;
     color: #4B4453;
-    margin-right: 20px;
     padding: 15px;
 }
 
@@ -197,23 +196,14 @@ video {
 /* hero image */
 
 #hero-image {
+    margin-top: 0;
     height: 250px;
     width: 100%;
     background: url('../images/hero-image.jpg') repeat;
     background-position: 2% 20%;
 }
 
-/* footer image */
-/*
-#bottom-image {
-    height:150px;
-    width: 100%;
-    background: url('/assets/images/tranquil.jpeg') center no-repeat;
-}
-*/
-
-
-/* social media links */
+/* social media links styling */
 
 footer {
     height: 150px;
@@ -240,7 +230,36 @@ footer {
 
 /* form styling */
 
+/* media queries */
+
+/* for screens at 961px or larger*/
+@media screen and (max-width: 961px) {
+    .navigation-menu {
+        width: 25%;
+        font-size: 70%;
+        display: inline;
+        margin-top: 20px;
+        margin-right: 20px;
+        padding: 0;
+        position: relative;
+        clear: both;
+        left: -442px;
+        top: 50px;
+    }
+
+    #logo {
+        margin: 0;
+    }
+
+    #hero-image {
+        background: none;
+
+    }
+}
+
 label {
     line-height: 150px;
 }
+
+
 
