--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,12 +154,12 @@ iframe {
 /* image background for index.html information sections */
 
 #text-image {
-    background: url('../images/nightsky.jpeg') repeat;
+    background: url('../images/nightsky.jpeg');
     background-color: #462684;
     margin-top: 10px;
     height: 400px;
     width: 100%;
-    position: center center cover no-repeat;
+    background-position: center center cover no-repeat;
     display:inline-block;
 }
 
@@ -234,7 +234,7 @@ footer {
 
 /* for screens at 992px or larger*/
 
-@media screen and (max-width: 992px) {
+/* @media screen and (max-width: 992px) {
     .navigation-menu {
         width: 65%;
         font-size: 65%;
@@ -272,38 +272,63 @@ footer {
 }
 
 */
-@media screen and (max-width: 768px) {
-    .navigation-menu {
-        width: 45%;
-        font-size: 45%;
-        display: inline;
-        float: left;
-        margin-right: 10px;
-        clear: both;
-        position: relative;
-        bottom: -40px;
-        left: -47px;
-    }
-
-    .float-center, .float-left, .float-right {
-        display: block;
-        float: left;
-        max-width: 30%;
-    }
+/*
     
 }
 
-@media screen and (max-width: 576px) {
-    .navigation-menu {
-        width: 25%;
-        font-size: 25%;
-        display: inline;
+    
+}
+*/
+
+/* media queries */
+
+@media screen and (max-width:768px) {
+
+    div > .background-box {
+        background-color: rgba (0, 140, 202 0.2);
+    }
+
+    .float-left {
+        text-align: center;
+        width: 65%;
+        height: 200px;
         float: left;
-        margin-right: 5px;
+        margin-left: 20%;
         clear: both;
-        position: relative;
-        bottom: -20px;
-        left: -27px;
+        padding: 40px;
+        border: 1px solid white;
+    }
+
+    .float-right {
+        text-align: center;
+        margin-left: 20%;
+        width: 65%;
+        height: 200px;
+        float: left;
+        padding: 40px;
+        border: 1px solid white;
+    }
+
+    .float-center{
+        
+        margin-left: 20%;
+        width: 65%;
+        height: 200px;
+        float: left;
+        clear: both;
+        padding: 40px;
+        border: 1px solid white;
+    }
+
+    #smaller-screen-bgimage {
+        background: url('../images/starry-sky2.jpeg');
+        background-color: #462684;
+        margin-top: 10px;
+        height: 1000px;
+        width: 100%;
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        display:inline-block;
     }
     
 }
