nav menu displayed horizontally on decreased screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ form > label {
     letter-spacing: 3px;
     text-decoration: none;
     float: left;
-    position: absolute;
+    
 }
 
 .float-right {
@@ -185,7 +185,7 @@ iframe {
     height: 400px;
     width: 100%;
     background-position: center center cover no-repeat;
-    display:inline-block;
+    display: inline-block;
 }
 
 
@@ -200,7 +200,6 @@ iframe {
     float: right;
     list-style-type: none;
     margin-right: 10px;
-
 }
 
 .navigation-menu a{
@@ -209,6 +208,7 @@ iframe {
     color: #4B4453;
     padding: 15px;
 }
+
 
 .navigation-menu, #logo {
     line-height: 150px;
@@ -260,19 +260,25 @@ footer {
 /* for screens at 992px or larger*/
 
 @media screen and (max-width: 992px) {
-    #logo {
-        display: block;
-        clear: both;
+    
+    .navigation-menu {
+        clear: left;
+        float: left;
+        margin-top: 30px;
+        line-height: 50px;
     }
-    /*
-    .navigation-menu li {
-        width: 40%;
-        line-height: 40px;
-        text-align: left;
-        font-size: 65%;
-        padding: 0;
+
+    #hero-image {
+        margin-top: 10px;
+        width: 100%;
+        background: url('../images/hero-image.jpg') center no-repeat;
+        background-position: 10% 40%;
     }
-    */
+
+    footer {
+        height: 150px;
+        position: sticky;
+    }
 
 /* media queries */
 
@@ -365,6 +371,11 @@ footer {
         clear: both;
         padding: 0;
     }
+
+    footer {
+        height: 150px;
+        position: sticky;
+    }
     
 }
 
@@ -376,6 +387,11 @@ footer {
         padding: 0;
         margin-bottom: 5px;
     }
+
+    footer {
+        height: 150px;
+        position: sticky;
+    }
     
 }
 
@@ -383,4 +399,9 @@ footer {
 
 label {
     line-height: 150px;
+}
+
+footer {
+    height: 150px;
+    position: sticky;
 }
