--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,6 +382,35 @@ footer {
 /* For extra small screens 576px or smaller */
 
 @media screen and (max-width: 576px) {
+
+    .float-left {
+        text-align: center;
+        width: 90%;
+        margin: 0 auto;
+        clear: both;
+        padding: 0;
+        border: none;
+        
+    }
+
+    .float-right {
+        text-align: center;
+        margin: 0 auto;
+        width: 90%;
+        padding: 0;
+        clear: both;
+        border: none;
+    }
+
+    .float-center {
+        margin: 0 auto;
+        width: 90%;
+        clear: both;
+        padding: 0;
+        border: none;
+        
+    }
+
     iframe {
         clear:both;
         padding: 0;
