adding image elements to homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,6 @@ hr {
     margin-left: 20px;
 }
 
-
 form {
     clear: both;
     border: 1px solid grey;
@@ -165,7 +164,6 @@ form > label {
     text-transform: uppercase;
     text-decoration: underline 1px solid #3a3a3a;
     margin-left: 20px;
-    /*height: 50%;*/
     
 }
 
@@ -273,6 +271,14 @@ footer {
         width: 100%;
         background: url('../images/hero-image.jpg') center no-repeat;
         background-position: 10% 40%;
+    }
+
+    #meditation-quote-3, #meditation-quote-2, #meditation-quote-4 {
+        height: 300px;
+        width: 300px;
+        float: left;
+        margin: 0 auto;
+        z-index: 2;
     }
 
     footer {
@@ -383,9 +389,16 @@ footer {
 
 @media screen and (max-width: 576px) {
 
-    .float-left {
-        text-align: center;
+    #main-page-response {
         width: 90%;
+        height: 576px;
+        margin: 0 auto;
+
+    }
+
+    .float-left, .float-right {
+        text-align: center;
+        width: inherit;
         margin: 0 auto;
         clear: both;
         padding: 0;
@@ -393,13 +406,14 @@ footer {
         
     }
 
-    .float-right {
-        text-align: center;
-        margin: 0 auto;
+    .float-left h2, .float-right h2 {
         width: 90%;
-        padding: 0;
-        clear: both;
-        border: none;
+        text-align: center;
+    }
+
+    .float-left p, .float-right p  {
+        width: 90%;
+        text-align: center;
     }
 
     .float-center {
@@ -418,7 +432,6 @@ footer {
     }
 
     footer {
-        height: 150px;
         position: sticky;
     }
     
