--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,9 +225,14 @@ textarea {
 
 iframe {
     height: 300px;
-    width: 500px;
+    width: 400px;
     margin: 0 auto;
-    clear: both;
+    
+}
+
+.info {
+    clear: left;
+    float: left;
 }
 
 /* image background for index.html information sections */
