--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
 
 body {
     font-family: Roboto, sans-serif;
-    font-weight: 600;
     color: #3a3a3a; 
     background-image: url ('../images/lavender-photo.jpeg');
     background-color: rgba(188,164,215,0.5);
@@ -30,6 +29,15 @@ h3 {
     height: 2px;
     margin-left: 20px;
     margin-bottom: 40px;
+}
+
+h4 {
+    font-size: medium;
+}
+
+h5 {
+    font-size: medium;
+    margin-left: 20px;
 }
 
 p{ 
@@ -147,8 +155,6 @@ textarea {
     border-bottom: 1px solid #a393eb;
 }
 
-/* paragraph display on index.html */
-
 #logo {
     font-size: 350%;
     padding-left: 20px;
@@ -156,32 +162,30 @@ textarea {
     color: #9C89B3;
     letter-spacing: 3px;
     text-decoration: none;
-    float: left;
-    
+    float: left; 
 }
+
+/* paragraph styling on index.html (home) page */
 
 .float-right {
     float: right;
     width: 33%;
-    padding: 50px 30px;
-    
-    
+    padding: 50px 30px;  
+}
+
+
+.float-left {
+    float: left;
+    width: 33%;
+    padding: 50px 30px;   
 }
 
 .float-center {
     margin: 0 auto;
     width: 33%;
-    padding: 50px 30px;
-    
-    
+    padding: 50px 30px; 
 }
-.float-left {
-    float: left;
-    width: 33%;
-    padding: 50px 30px;
-    
-    
-}
+/* tutorial page styling */
 
 .tutorial-float-right{
     float: right;
@@ -204,7 +208,7 @@ textarea {
     
 }
 
-/* tutorial page styling */
+
 
 .tutorial-text p {
     color: #3a3a3a;
@@ -227,12 +231,12 @@ iframe {
     height: 300px;
     width: 400px;
     margin: 0 auto;
-    
 }
 
-.info {
-    clear: left;
+.info > p {
     float: left;
+    margin: 0;
+    padding: 0;
 }
 
 /* image background for index.html information sections */
@@ -314,6 +318,40 @@ footer {
 }
 
 /* media queries */
+
+@media screen and (max-width:1151px) {
+    .tutorial-float-right{
+        text-align: center;
+        float: right;
+        clear:both;
+        width: 90%;
+        padding: 50px 30px;
+    }
+    
+    .tutorial-float-center{
+        margin: 0 auto;
+        text-align: center;
+        clear:both;
+        width: 90%;
+        padding: 50px 30px;
+    }
+    
+    .tutorial-float-left{
+        float: left;
+        text-align: center;
+        clear:both;
+        width: 90%;
+        padding: 50px 30px;   
+    }
+
+    iframe {
+        height: 300px;
+        width: 80%;
+        margin: 0 auto;
+        clear: both;
+}
+
+}
 
 
 /* for screens at 992px or larger*/
