--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ h3 {
     clear: both;
     height: 2px;
     margin-left: 20px;
-    margin-bottom: 40px;
+    margin-top: 20px;
 }
 
 h4 {
@@ -42,6 +42,7 @@ h5 {
     color: #3a3a3a;
     font-size: medium;
     margin-left: 20px;
+    margin-top: 20px;
 }
 
 p{  font-family: Noto Sans, sans-serif;
