--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,18 @@ li {
     color: #FCFAF5;
 }
 
+img {
+    height: 300px;
+    width: 20%;
+    padding: 0;
+    clear: both;
+    display: inline;    
+}
+
+#home-photos {
+    width; 100%;
+}
+
 footer {
     position: sticky;
 }
@@ -172,6 +184,11 @@ textarea {
     letter-spacing: 3px;
     text-decoration: none;
     float: left; 
+}
+
+#main-page-response {
+    height: 1000px;
+    width: 100%;
 }
 
 /* paragraph styling on index.html (home) page */
