adding media query for small phone screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,8 @@ h5 {
     margin-top: 20px;
 }
 
-p{  font-family: Noto Sans, sans-serif;
+p { 
+    font-family: Noto Sans, sans-serif;
     text-align: center;
     padding: 10px;
     margin-top: 20px;
@@ -63,13 +64,14 @@ li {
 img {
     height: 300px;
     width: 20%;
-    padding: 0;
-    clear: both;
+    padding: 15px;
     display: inline;    
 }
 
 #home-photos {
-    width; 100%;
+    width: 100%;
+    margin: 5px 15%;
+    
 }
 
 footer {
@@ -441,7 +443,26 @@ footer {
         position: sticky;
     }
 
-/* media queries */
+    @media screen and (max-width:820px){
+        img {
+            height: 300px;
+            width: 30%;
+            margin-left: 150px;
+            display: block;
+            clear: both; 
+        }
+
+        #main-page-response {
+            height: 1650px;
+            width: 100%;
+        }
+            
+            
+        }
+
+
+    }
+
 
 @media screen and (max-width:768px) {
 
@@ -590,4 +611,13 @@ footer {
         position: sticky;
     }
     
+}
+
+@media screen and (max-width: 320px) {
+
+    
+    footer {
+        position: sticky;
+    }
+
 }
