--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,7 +346,9 @@ footer {
 
 /* media queries */
 
+/* media query for screens 1151px or larger */
 @media screen and (max-width:1151px) {
+/* editing how tutorial.html iframes and written tutorial sections are displayed */    
     .tutorial-float-right{
         text-align: center;
         float: right;
@@ -377,14 +379,12 @@ footer {
         margin: 0 auto;
         clear: both;
 }
-
 }
 
-
-/* for screens at 992px or larger*/
+/* media query for screens at 992px or larger */
 
 @media screen and (max-width: 992px) {
-    
+    /* styling navigation menu */
     .navigation-menu {
         clear: left;
         float: left;
@@ -392,6 +392,7 @@ footer {
         line-height: 50px;
     }
 
+    /* styling the hero image */
     #hero-image {
         margin-top: 10px;
         width: 100%;
@@ -399,14 +400,7 @@ footer {
         background-position: 10% 40%;
     }
 
-    #meditation-quote-3, #meditation-quote-2, #meditation-quote-4 {
-        height: 300px;
-        width: 300px;
-        float: left;
-        margin: 0 auto;
-        z-index: 2;
-    }
-
+    /* styling the check-in page and journal section */
     .check-in-page {
         height: 800px;
         clear: both;
@@ -433,15 +427,14 @@ footer {
         width: 20%;
         height: 30%;
         border-bottom: 10px;
-        
     }
-
-
 
     footer {
         height: 150px;
         position: sticky;
     }
+
+    /* media query for screens 820px or larger */
 
     @media screen and (max-width:820px){
         img {
@@ -452,25 +445,21 @@ footer {
             clear: both; 
         }
 
+        /* styling the container for the index.html sections */
         #main-page-response {
             height: 1650px;
             width: 100%;
         }
-            
-            
-        }
-
-
     }
 
-
-@media screen and (max-width:768px) {
-
+    /* media query for screens 768px or larger */
+    @media screen and (max-width:768px) {
     iframe {
         clear: both;
         padding: 14px;
     }
 
+    /* styling the container for the index.html sections */
     #main-page-response {
         width:100%;
         height: 768px;
@@ -478,6 +467,7 @@ footer {
 
     }
 
+    /* styling the headings and paragraphs in index.html */
     .float-left {
         text-align: center;
         width: 65%;
@@ -510,12 +500,12 @@ footer {
         border: 1px solid white;
     }
 
-    /* responsive image */
+    /* responsive image  below 768px */
     #smaller-screen-bgimage {
         background: url('../images/starry-sky2.jpeg');
         background-color: #462684;
         margin-top: 10px;
-        height: 1000px;
+        height: 750px;
         width: 100%;
         background-size: 100% 100%;
         background-repeat: no-repeat;
@@ -561,17 +551,32 @@ footer {
     
 }
 
-/* For extra small screens 576px or smaller */
+/* For small screens 599px or smaller */
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 599px) {
+    /* restyling the logo */ 
+    #logo {
+        font-size: 300%;
+        left: 0;
+        height: 75px;
+        color: #9C89B3;
+        letter-spacing: 3px;
+        text-decoration: none;
+        float: left; 
+    }
+        /* styling the navigation menu */
+        .navigation-menu {
+            font-size: 70%;
+        }
 
+    /* styling the container for the index.html sections*/
     #main-page-response {
-        width: 90%;
-        height: 576px;
+        width: 100%;
+        height: 599px;
         margin: 0 auto;
-
     }
 
+    /* styling heading and paragraph sections */
     .float-left, .float-right {
         text-align: center;
         width: inherit;
@@ -579,9 +584,8 @@ footer {
         clear: both;
         padding: 0;
         border: none;
-        
     }
-
+    
     .float-left h2, .float-right h2 {
         width: 90%;
         text-align: center;
@@ -600,21 +604,53 @@ footer {
         border: none;
         
     }
+ /* styling images at bottom of page */
+    img {
+        height: 150px;
+        width: 20%;
+        padding: 1px;
+        margin-left: 0;
+        display: inline;
+    }
 
+    /* styling iframe tutorials */ 
     iframe {
         clear:both;
         padding: 0;
         margin-bottom: 5px;
     }
 
+    /* styling the footer */
     footer {
+        height: 150px;
         position: sticky;
     }
-    
 }
 
-@media screen and (max-width: 320px) {
+/* media query for screens 320px and larger */
 
+@media screen and (max-width: 320px) {
+    /* re-style logo to accommodate smaller screen sizes*/
+
+    /* restyling the hero image */
+       /* restyling the logo */ 
+       #logo {  
+        font-size: 150%;
+        left: 0;
+        height: 75px;
+        color: #9C89B3;
+        letter-spacing: 3px;
+        text-decoration: none;
+        float: left; 
+    }
+        /* styling the navigation menu */
+        .navigation-menu {
+            display: inline;
+            font-size: 20%;
+            margin-top: 0;
+            padding: 0;
+            width: 100%;
+        }
     
     footer {
         position: sticky;
